fixed company dot overflow and added margin to images

--- a/app/assets/stylesheets/components/_content-card.scss
+++ b/app/assets/stylesheets/components/_content-card.scss
@@ -55,11 +55,16 @@
   align-items: center;
   width: 50%;
   min-width: 300px;
+  position: relative;
 }
 
 .card-image-area img {
   width: 100%;
   max-width: 100vw;
+}
+
+.card-image-area .w45 {
+  width: 45%;
 }
 
 .card-image {
@@ -70,6 +75,7 @@
   max-width: calc(100% - 2rem);
   margin-left: auto;
   margin-right: auto;
+  margin: 1rem;
 }
 
 .card-image-large {
